fix(card) : card alignment fixed

--- a/client/src/components/style/style.css
+++ b/client/src/components/style/style.css
@@ -17,6 +17,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  max-width: 300px;
+  min-height: 530px;
 }
 .card-description {
   color: black;
@@ -51,6 +53,12 @@ img {
 
 .card:hover {
   transform: scale(1.02);
+}
+
+.card-body {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .link-style {
